force-app/main/default/objects/BinWeight__c/BinWeight__c.object-meta.xml
<CustomObject>
    <label>Bin Weight</label>
    <nameField>
        <displayFormat>BW-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bin Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>