force-app/main/default/objects/BinWeight__c/fields/AllowedWeight__c.field-meta.xml
<CustomField>
    <fullName>AllowedWeight__c</fullName>
    <label>Allowed Weight</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>