force-app/main/default/objects/BinWeight__c/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <label>Category code</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>