force-app/main/default/objects/BinWeight__c/fields/Collection_Waypoint__c.field-meta.xml
<CustomField>
    <fullName>Collection_Waypoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Waypoint</label>
    <referenceTo>Collection_Waypoints__c</referenceTo>
    <relationshipLabel>Bin Weights</relationshipLabel>
    <relationshipName>Bin_Weights</relationshipName>
    <type>Lookup</type>
</CustomField>