force-app/main/default/objects/BinWeight__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Collected At?</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>