force-app/main/default/objects/BinWeight__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bin Weights</relationshipLabel>
    <relationshipName>BinWeights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>