force-app/main/default/objects/BinWeight__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Bin Weights</relationshipLabel>
    <relationshipName>BinWeights</relationshipName>
    <type>Lookup</type>
</CustomField>