force-app/main/default/objects/BinWeight__c/fields/Overweight__c.field-meta.xml
<CustomField>
    <fullName>Overweight__c</fullName>
    <formula>MAX(Kilogram__c - AllowedWeight__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overweight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>