force-app/main/default/objects/BinWeight__c/fields/text_date__c.field-meta.xml
<CustomField>
    <fullName>text_date__c</fullName>
    <formula>TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>text date</label>
    <type>Text</type>
</CustomField>