force-app/main/default/objects/BinWeight__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weight</label>
    <referenceTo>Weight__c</referenceTo>
    <relationshipLabel>Bin Weights (Weight)</relationshipLabel>
    <relationshipName>BinWeights</relationshipName>
    <type>Lookup</type>
</CustomField>