force-app/main/default/objects/BinWeight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Date__c</columns>
    <columns>CategoryCode__c</columns>
    <columns>Kilogram__c</columns>
    <columns>OrderProduct__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Collection_Waypoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>